--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -6,6 +6,8 @@ on:
     branches:
     - master
 # on: push    # Default will running for every branch.
+on: workflow_dispatch
+
     
 jobs:
   build:
