--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -6,7 +6,8 @@ on:
     branches:
     - master
 # on: push    # Default will running for every branch.
-on: workflow_dispatch
+on:
+  workflow_dispatch
 
     
 jobs:
