--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -2,7 +2,7 @@ name: Flutter CI
 # This workflow is triggered on pushes to the repository.
 
 on:
-  push:
+  workflow_dispatch:
     branches:
     - master
     
