--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dev_dependencies:
   flutter_settings_screens: ^0.3.0-null-safety
   flutter_launcher_icons: ^0.9.0
   flutter_native_splash: ^1.1.8
-  upnp: ^2.0.1
+  upnp_ns: ^1.0.0
   fl_chart: ^0.36.2
   intl: ^0.17.0
   url_launcher: ^6.0.9
