--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -39,6 +39,8 @@ jobs:
     # Build apk.
     - run: echo "${{ secrets.KEYSTORE_JKS_PROD }}" | base64 --decode > upload-keystore.jks
     - run: echo "${{ secrets.KEY_PROPERTIES_PROD }}" | base64 --decode > android/app/key.properties
+    - run: ls -a
+    - run: ls -a androis/app
     
     - run: flutter build apk
     
